--- a/manifest.json
+++ b/manifest.json
@@ -1,15 +1,20 @@
 {
-  "name": "Multimarcss",
-  "short_name": "catalogos multimarcas",
-  "icons": [
-    {
-      "src": "https://i.ibb.co/Ph05wT8/photostudio-1684347771989.jpg",
-      "sizes": "192x192",
-      "type": "image/png"
-    }
-  ],
+  "name": "Mi PWA",
+  "short_name": "PWA",
   "start_url": "/",
   "display": "standalone",
-  "background_color": "#ffffff",
-  "theme_color": "#3367D6"
+  "theme_color": "#3367D6",
+  "background_color": "#FFFFFF",
+  "icons": [
+    {
+      "src": "iconhttps://i.ibb.co/Ph05wT8/photostudio-1684347771989.jpg
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "icon-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
+  ]
 }
