--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,7 @@
   "background_color": "#FFFFFF",
   "icons": [
     {
-      "src": "https://i.ibb.co/Ph05wT8/photostudio-1684347771989.jpg,
+      "src": "https://i.ibb.co/Ph05wT8/photostudio-1684347771989.jpg",
       "sizes": "192x192",
       "type": "image/png"
     },
