--- a/manifest.json
+++ b/manifest.json
@@ -15,7 +15,7 @@
       "type": "image/png"
     }
   ],
-  "start_url": "movil/index.html",
+  "start_url": "index.html",
   "display": "standalone",
   "orientation": "portrait",
   "background_color": "#a1d9fc",
